# iba-timeseries

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 02_global_ts_model.ipynb  03_region_ts_model.ipynb  04_prophet_model.ipynb  05_sarimax_model.ipynb
