[project]
name = "mlp-multivar-ts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "darts>=0.29.0",
    "datasetsforecast>=1.0.0",
    "hierarchicalforecast>=1.2.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.4",
    "transformers>=4.51.3",
    "utilsforecast>=0.2.12",
    "xgboost>=3.0.0",
]
